Updated the script classes analyser to properly load class files.